--- a/semana3/dia1/estilos.css
+++ b/semana3/dia1/estilos.css
@@ -7,15 +7,21 @@
 body, html {
     width: 100%;
     height: 100%;
+    background-color:transparent;
 }
 
-body {
+html {
+    background: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg") no-repeat center center fixed;
+    background-size: cover;
+  }
+
+.bg {
     /* The image used */
     background-image: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg");
   
     /* Full height */
     height: 100%;
-  
+    width: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -62,7 +68,7 @@ header {
         rgb(11, 70, 109));
 }
 
-#main {
+main {
     z-index: 0;
     text-align: center;
     margin: auto;
@@ -113,3 +119,65 @@ header {
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
 }
+
+#parrafo {
+    font-size: large;
+    color: white;
+    margin-top: 250px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 50px;
+    border-radius: 20px;
+    justify-content: center;
+    background: linear-gradient(
+        180deg, 
+        rgb(39, 114, 211),
+        rgb(64, 164, 231),
+        rgb(11, 70, 109));
+}
+
+footer {
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color:#1a70ab;
+  }
+
+#waves {
+    width: 100%;
+    left: 0;
+    margin-bottom: -10px;
+  }
+
+  #sub-footer-1 {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  #sub-footer-2 {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  #sub-footer-3 {
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+  }
+  .red-social {
+    width: 30px;
+    margin: 10px;
+    color: white;
+  }
+  .texto-footer{
+    font-size: medium;
+    color: white;
+    }
