--- a/semana3/dia1/estilos.css
+++ b/semana3/dia1/estilos.css
@@ -1,183 +1,247 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Source+Code+Pro&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Source+Code+Pro&display=swap");
 
 * {
-    margin: 0;
+  margin: 0;
 }
 
-body, html {
-    width: 100%;
-    height: 100%;
-    background-color:transparent;
+body,
+html {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
 }
 
 html {
-    background: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg") no-repeat center center fixed;
-    background-size: cover;
-  }
+  background: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg")
+    no-repeat center center fixed;
+  background-size: cover;
+}
 
 .bg {
-    /* The image used */
-    background-image: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg");
-  
-    /* Full height */
-    height: 100%;
-    width: 100%;
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+  /* The image used */
+  background-image: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg");
+
+  /* Full height */
+  height: 100%;
+  width: 100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 nav {
-    margin: 10px;
-    padding: 15px;
-    
+  margin: 10px;
+  padding: 15px;
 }
 
 a {
-    text-decoration: none;
-    color: white;
-    padding: 10px;
-    font-family: 'Roboto', sans-serif;
-
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  font-family: "Roboto", sans-serif;
 }
 
 #nombre {
-    position: relative;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    top: 100px !important;
-    text-align: center;
-    font-size: xxx-large;
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  top: 100px !important;
+  text-align: center;
+  font-size: xxx-large;
 }
 
 header {
-    z-index: 2;
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: space-between;
-    background: linear-gradient(
-        180deg, 
-        rgb(39, 114, 211),
-        rgb(64, 164, 231),
-        rgb(11, 70, 109));
+  z-index: 2;
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  background: linear-gradient(
+    180deg,
+    rgb(39, 114, 211),
+    rgb(64, 164, 231),
+    rgb(11, 70, 109)
+  );
 }
 
 main {
-    z-index: 0;
-    text-align: center;
-    margin: auto;
-    max-width: fit-content;
-    background-size: contain;
+  z-index: 0;
+  text-align: center;
+  /*margin: auto;
+  max-width: fit-content;*/
+  background-size: contain;
 }
 
 #fondo {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 #logo {
-    margin: 10px;
-    height: 50px;
-    width: 50px;
+  margin: 10px;
+  height: 50px;
+  width: 50px;
 }
 
 #perfil {
-    margin: auto;
-    position: relative;
-    top: 200px !important;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 4px solid white;
-    margin-bottom: 100px;
+  margin: auto;
+  position: relative;
+  top: 200px !important;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 4px solid white;
+  margin-bottom: 100px;
 }
 
 #botones {
-    position: relative;
-    top: 180px !important;
+  position: relative;
+  top: 180px !important;
 }
 
 .boton {
-    border-radius: 10px;
-    border: 2px solid white;
-    background: linear-gradient(
-        180deg, 
-        rgb(39, 114, 211),
-        rgb(64, 164, 231),
-        rgb(11, 70, 109));
-    color: white;
-    font-size: 20px;
-    padding: 15px;
-    margin-right: 20px;
-    cursor: pointer;
-    font-family: 'Roboto', sans-serif;
+  border-radius: 10px;
+  border: 2px solid white;
+  background: linear-gradient(
+    180deg,
+    rgb(39, 114, 211),
+    rgb(64, 164, 231),
+    rgb(11, 70, 109)
+  );
+  color: white;
+  font-size: 20px;
+  padding: 15px;
+  margin-right: 20px;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
 }
 
 #parrafo {
-    font-size: large;
-    color: white;
-    margin-top: 250px;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding: 50px;
-    border-radius: 20px;
-    justify-content: center;
-    background: linear-gradient(
-        180deg, 
-        rgb(39, 114, 211),
-        rgb(64, 164, 231),
-        rgb(11, 70, 109));
+  font-size: large;
+  color: white;
+  margin-top: 250px;
+  margin-left: 5%;
+  margin-right: 10%;
+  padding: 50px;
+  border-radius: 20px;
+  justify-content: center;
+  background: linear-gradient(
+    180deg,
+    rgb(39, 114, 211),
+    rgb(64, 164, 231),
+    rgb(11, 70, 109)
+  );
 }
 
 footer {
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color:#1a70ab;
-  }
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #1a70ab;
+  position: absolute;
+}
 
 #waves {
-    width: 100%;
-    left: 0;
-    margin-bottom: -10px;
+  width: 100%;
+  left: 0;
+  margin-bottom: -10px;
+  position: absolute;
+  bottom: 10%;
+}
+
+#sub-footer-1 {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+#sub-footer-2 {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+#sub-footer-3 {
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+}
+.red-social {
+  width: 30px;
+  margin: 10px;
+  color: white;
+}
+.texto-footer {
+  font-size: medium;
+  color: white;
+}
+
+/* pantallas EXTRA PEQUEÑAS (celulares, hasta 600px)*/
+@media only screen and (max-width: 600px) {
+  header {
+    background: linear-gradient(
+      180deg,
+      rgb(211, 108, 39),
+      rgb(180, 141, 32),
+      rgb(175, 126, 21)
+    );
   }
 
-  #sub-footer-1 {
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
+  #parrafo {
+    display: none;
   }
-  #sub-footer-2 {
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
+}
+
+/* pantallas PEQUEÑAS (tablets portrait(vertical) celulares grandes, ancho mayor a 600px  )*/
+@media only screen and (min-width: 600px) {
+  html {
+    background: url("https://images.unsplash.com/photo-1604964432806-254d07c11f32?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8ZGV2ZWxvcGVyfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80")
+      no-repeat center center fixed;
+    background-size: cover;
   }
-  #sub-footer-3 {
-    margin: 10px;
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
+
+  #parrafo {
+    display: none;
   }
-  .red-social {
-    width: 30px;
-    margin: 10px;
-    color: white;
+}
+
+/* pantallas MEDIANAS (tablets landscale(horizontal) mayor igual 768px)*/
+@media only screen and (min-width: 768px) {
+}
+
+/* pantallas GRANDES (laptops/desktop mayor o igual a 992px)*/
+@media only screen and (min-width: 992px) {
+  footer {
+    background-color: rgb(115, 148, 26);
   }
-  .texto-footer{
-    font-size: medium;
-    color: white;
-    }
+
+  #parrafo {
+    display: none;
+  }
+
+  svg path{
+    fill: rgb(115, 148, 26);;
+  }
+}
+
+/* pantallas EXTRA GRANDES (laptops gamers, monitores extra grandes) mayor o igual a 1200px */
+
+@media only screen and (min-width: 1200px) {
+  #perfil {
+    display: none;
+  }
+
+  
+}
