--- a/semana3/dia1/estilos.css
+++ b/semana3/dia1/estilos.css
@@ -1,247 +1,249 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Source+Code+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 * {
   margin: 0;
-}
-
-body,
-html {
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
-  background: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg")
+  background: url("https://blog.hyperiondev.com/wp-content/uploads/2018/01/Web-Developer-vs-Software-Developer.jpg")
     no-repeat center center fixed;
   background-size: cover;
 }
 
-.bg {
-  /* The image used */
-  background-image: url("https://cdn.techinasia.com/wp-content/uploads/2018/07/business-code-coding-943096.jpg");
-
-  /* Full height */
-  height: 100%;
-  width: 100%;
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-nav {
-  margin: 10px;
-  padding: 15px;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-  padding: 10px;
-  font-family: "Roboto", sans-serif;
-}
-
-#nombre {
-  position: relative;
-  font-family: "Roboto", sans-serif;
-  color: white;
-  top: 100px !important;
-  text-align: center;
-  font-size: xxx-large;
-}
-
 header {
-  z-index: 2;
-  width: 100%;
-  height: 70px;
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  height: 70px;
+  background-color: white;
+  opacity: 0.65;
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(
-    180deg,
-    rgb(39, 114, 211),
-    rgb(64, 164, 231),
-    rgb(11, 70, 109)
-  );
+}
+#logo {
+  margin: 10px;
+  height: 40px;
+  width: 40px;
+}
+
+nav {
+  margin-top: 20px;
+  margin-right: 10px;
+}
+a {
+  text-decoration: none;
+  color: rgb(212, 124, 22);
+  font-weight: bolder;
+  padding: 5px;
 }
 
 main {
-  z-index: 0;
   text-align: center;
-  /*margin: auto;
-  max-width: fit-content;*/
-  background-size: contain;
 }
 
-#fondo {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+#foto {
+  margin-top: 100px;
+  border-radius: 48%;
+  width: 300px;
+  border: 5px solid white;
 }
 
-#logo {
-  margin: 10px;
-  height: 50px;
-  width: 50px;
+#nombre {
+  margin-bottom: 30px;
+  color: wheat;
+  font-size: xxx-large;
+  font-weight: bold;
 }
 
-#perfil {
-  margin: auto;
-  position: relative;
-  top: 200px !important;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 4px solid white;
-  margin-bottom: 100px;
-}
-
-#botones {
-  position: relative;
-  top: 180px !important;
-}
-
-.boton {
-  border-radius: 10px;
-  border: 2px solid white;
-  background: linear-gradient(
-    180deg,
-    rgb(39, 114, 211),
-    rgb(64, 164, 231),
-    rgb(11, 70, 109)
-  );
-  color: white;
-  font-size: 20px;
-  padding: 15px;
-  margin-right: 20px;
+button {
+  border-radius: 5px;
+  border: 1px solid wheat;
+  background-color: white;
+  color: gray;
+  font-size: 40px;
+  padding: 20px;
+  margin: 20px;
   cursor: pointer;
-  font-family: "Roboto", sans-serif;
+  opacity: 0.8;
 }
 
 #parrafo {
   font-size: large;
-  color: white;
-  margin-top: 250px;
-  margin-left: 5%;
-  margin-right: 10%;
-  padding: 50px;
+  color: black;
+  margin: 100px;
+  padding: 30px;
   border-radius: 20px;
   justify-content: center;
-  background: linear-gradient(
-    180deg,
-    rgb(39, 114, 211),
-    rgb(64, 164, 231),
-    rgb(11, 70, 109)
-  );
-}
-
-footer {
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: #1a70ab;
-  position: absolute;
+  background-color: wheat;
+  opacity: 0.8;
+  box-sizing: border-box;
 }
 
 #waves {
   width: 100%;
   left: 0;
-  margin-bottom: -10px;
-  position: absolute;
-  bottom: 10%;
+  margin-bottom: -7px;
+}
+footer {
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  background-color: wheat;
 }
 
-#sub-footer-1 {
-  margin: 10px;
+.sub-footer {
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px;
 }
-#sub-footer-2 {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 20px;
-}
+
 #sub-footer-3 {
-  margin: 10px;
+  padding: 10px;
   display: flex;
   flex-direction: row;
-  padding: 20px;
+}
+
+.texto-footer {
+  font-size: 10px;
+  color: black;
 }
 .red-social {
-  width: 30px;
+  width: 10px;
   margin: 10px;
-  color: white;
-}
-.texto-footer {
-  font-size: medium;
-  color: white;
 }
 
-/* pantallas EXTRA PEQUEÑAS (celulares, hasta 600px)*/
+/*pantalla celular*/
 @media only screen and (max-width: 600px) {
-  header {
-    background: linear-gradient(
-      180deg,
-      rgb(211, 108, 39),
-      rgb(180, 141, 32),
-      rgb(175, 126, 21)
-    );
+  #foto {
+    width: 150px;
+  }
+  #nombre {
+    margin-right: 20px;
+    margin-left: 20px;
+    font-size: 30px;
+  }
+  a {
+    font-size: small;
+  }
+  #botones {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  button {
+    padding: 20px;
+    font-size: 20px;
+    opacity: 0.8;
+  }
+  #parrafo {
+    font-size: medium;
+    margin: 30px;
+    padding: 10px;
+  }
+  #waves {
+    margin-bottom: -5px;
+  }
+  .sub-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    justify-content: flex-start;
+  }
+  .texto-footer {
+    font-size: small;
   }
 
-  #parrafo {
-    display: none;
+  .red-social {
+    width: 20px;
+    margin: 20px;
   }
 }
 
-/* pantallas PEQUEÑAS (tablets portrait(vertical) celulares grandes, ancho mayor a 600px  )*/
 @media only screen and (min-width: 600px) {
-  html {
-    background: url("https://images.unsplash.com/photo-1604964432806-254d07c11f32?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8ZGV2ZWxvcGVyfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80")
-      no-repeat center center fixed;
-    background-size: cover;
+
+  #botones {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 80px;
   }
 
-  #parrafo {
-    display: none;
+  button {
+    padding: 20px;
+    font-size: 20px;
+    opacity: 0.8;
+  }
+
+  .sub-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    justify-content: flex-start;
+  }
+  .texto-footer {
+    font-size: medium;
+  }
+
+  .red-social {
+    width: 30px;
+    margin: 30px;
   }
 }
 
-/* pantallas MEDIANAS (tablets landscale(horizontal) mayor igual 768px)*/
 @media only screen and (min-width: 768px) {
+
+  #botones {
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+    justify-content: center;
+  }
+
+  button {
+    padding: 30px;
+    font-size: 20px;
+    opacity: 0.8;
+  }
+
+  .sub-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    justify-content: flex-start;
+  }
 }
 
-/* pantallas GRANDES (laptops/desktop mayor o igual a 992px)*/
 @media only screen and (min-width: 992px) {
-  footer {
-    background-color: rgb(115, 148, 26);
+  #botones {
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+    justify-content: center;
   }
 
-  #parrafo {
-    display: none;
+  button {
+    padding: 30px;
+    font-size: 25px;
+    opacity: 0.8;
   }
 
-  svg path{
-    fill: rgb(115, 148, 26);;
+  .sub-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    justify-content: flex-start;
   }
 }
 
-/* pantallas EXTRA GRANDES (laptops gamers, monitores extra grandes) mayor o igual a 1200px */
-
+/*pantallas MUY GRANDES(ej. laptos gamer , monitores extra grandes , o sea que tienen un ancho mayor o igual a 1200px)*/
 @media only screen and (min-width: 1200px) {
-  #perfil {
-    display: none;
-  }
-
-  
 }
